--- a/bspinfo/Makefile
+++ b/bspinfo/Makefile
@@ -1,12 +1,10 @@
 PROJECT := bspinfo
 SRC := $(wildcard *.c)
 OBJS := $(SRC:.c=.o)
+LIBS := ../common/cmdlib.o \
+	../common/bspfile.o
 
 all: $(PROJECT)
-
-$(PROJECT): $(OBJS)
-	@echo "  LD    $@"
-	@$(CC) -o $@ $(OBJS) ../common/cmdlib.o ../common/bspfile.o
 
 clean:
 	rm -rf *.o
