--- a/bspinfo/Makefile
+++ b/bspinfo/Makefile
@@ -1,13 +1,5 @@
-PROJECT := bspinfo
-SRC := $(wildcard *.c)
-OBJS := $(SRC:.c=.o)
+EXE := bspinfo
 LIBS := ../common/cmdlib.o \
 	../common/bspfile.o
-
-all: $(PROJECT)
-
-clean:
-	rm -rf *.o
-	rm -rf $(PROJECT)
 
 include ../qutils.inc
