--- a/light/Makefile
+++ b/light/Makefile
@@ -1,15 +1,7 @@
-PROJECT := light
-SRC := $(wildcard *.c)
-OBJS := $(SRC:.c=.o)
+EXE := light
 LIBS := ../common/cmdlib.o \
 	../common/bspfile.o \
 	../common/mathlib.o \
 	-lm
-
-all: $(PROJECT)
-
-clean:
-	rm -rf *.o
-	rm -rf $(PROJECT)
 
 include ../qutils.inc
