--- a/modelgen/Makefile
+++ b/modelgen/Makefile
@@ -1,4 +1,4 @@
-PROJECT := modelgen
+EXE := modelgen
 SRC := $(wildcard *.c)
 OBJS := $(SRC:.c=.o)
 LIBS := ../common/cmdlib.o \
@@ -7,11 +7,5 @@ LIBS := ../common/cmdlib.o \
 	../common/trilib.o \
 	../common/scriplib.o \
 	../common/lbmlib.o
-
-all: $(PROJECT)
-
-clean:
-	rm -rf *.o
-	rm -rf $(PROJECT)
 
 include ../qutils.inc
