--- a/qfiles/Makefile
+++ b/qfiles/Makefile
@@ -1,12 +1,4 @@
-PROJECT := qfiles
-SRC := $(wildcard *.c)
-OBJS := $(SRC:.c=.o)
+EXE := qfiles
 LIBS := ../common/cmdlib.o
-
-all: $(PROJECT)
-
-clean:
-	rm -rf *.o
-	rm -rf $(PROJECT)
 
 include ../qutils.inc
