--- a/qlumpy/Makefile
+++ b/qlumpy/Makefile
@@ -1,15 +1,7 @@
-PROJECT := qlumpy
-SRC := $(wildcard *.c)
-OBJS := $(SRC:.c=.o)
+EXE := qlumpy
 LIBS := ../common/cmdlib.o \
 	../common/lbmlib.o \
 	../common/wadlib.o \
 	../common/scriplib.o
-
-all: $(PROJECT)
-
-clean:
-	rm -rf *.o
-	rm -rf $(PROJECT)
 
 include ../qutils.inc
