--- a/texmake/Makefile
+++ b/texmake/Makefile
@@ -1,16 +1,8 @@
-PROJECT := texmake
-SRC := $(wildcard *.c)
-OBJS := $(SRC:.c=.o)
+EXE := texmake
 LIBS := ../common/cmdlib.o \
 	../common/mathlib.o \
 	-lm \
 	../common/lbmlib.o \
 	../common/trilib.o
-
-all: $(PROJECT)
-
-clean:
-	rm -rf *.o
-	rm -rf $(PROJECT)
 
 include ../qutils.inc
