--- a/qcc/Makefile
+++ b/qcc/Makefile
@@ -1,12 +1,4 @@
-PROJECT := qcc
-SRC := $(wildcard *.c)
-OBJS := $(SRC:.c=.o)
+EXE := qcc
 LIBS := ../common/cmdlib.o
-
-all: $(PROJECT)
-
-clean:
-	rm -rf *.o
-	rm -rf $(PROJECT)
 
 include ../qutils.inc
