--- a/sprgen/Makefile
+++ b/sprgen/Makefile
@@ -1,15 +1,7 @@
-PROJECT := sprgen
-SRC := $(wildcard *.c)
-OBJS := $(SRC:.c=.o)
+EXE := sprgen
 LIBS := ../common/cmdlib.o \
 	../common/lbmlib.o \
 	../common/scriplib.o \
 	-lm
-
-all: $(PROJECT)
-
-clean:
-	rm -rf *.o
-	rm -rf $(PROJECT)
 
 include ../qutils.inc
